<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_cancel">Cancel</string>
    <string name="action_close">Close</string>
    <string name="action_delete">Delete</string>
    <string name="action_discard">Discard</string>
    <string name="action_edit">Edit</string>
    <string name="action_export">Export</string>
    <string name="action_font_size">Font size</string>
    <string name="action_new">New Note</string>
    <string name="action_save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_sort_by">Sort notes by</string>
    <string name="app_name">Learning Notes</string>
    <string name="app_name_debug">Notepad (Debug)</string>
    <string name="cab_note_selected">note selected</string>
    <string name="cab_notes_selected">notes selected</string>
    <string name="changes_discarded">Changes discarded</string>
    <string name="dialog_about_message">"这款APP可以帮您整合身边已有的文本和媒体资源，形成一份可分享、可保存的资料，简化和方便生活。 "</string>
    <string name="dialog_about_title">About</string>
    <string name="dialog_are_you_sure">Are you sure?</string>
    <string name="dialog_delete_button_title">Delete note</string>
    <string name="dialog_delete_button_title_plural">Delete notes</string>
    <string name="dialog_save_button_title">Save changes</string>
    <string name="dialog_save_changes">Do you want to save your changes?</string>
    <string name="draft_restored">Draft restored</string>
    <string name="draft_saved">Draft saved</string>
    <string name="double_tap">Tip: double-tap text to switch to Edit mode</string>
    <string name="edit_note">Edit Note</string>
    <string name="edit_text">Type to add text</string>
    <string name="empty_note">Please enter some text!</string>
    <string name="error_exporting_notes">Error exporting notes!</string>
    <string name="error_importing_notes">Error importing notes!</string>
    <string name="error_loading_list">Error loading list of notes!</string>
    <string name="error_loading_note">Error loading note!</string>
    <string name="failed_to_save">Error: Failed to save note!</string>
    <string name="first_run">Welcome!\n\nTo create a note, click the New Note button (plus sign).</string>
    <string name="first_view">To edit a saved note, double-tap the text or click the Edit button (pencil).\n
        When editing, use "More"->"photo and record" to add more media.</string>
    <string name="import_notes">Import notes</string>
    <string name="loading_external_file">Loading external files is not supported</string>
    <string name="no_notes_found">No notes found</string>
    <string name="note_deleted">Note deleted</string>
    <string name="note_exported_to">Note exported successfully</string>
    <string name="note_saved">Note saved</string>
    <string name="notes_deleted">Notes deleted</string>
    <string name="notes_exported_to">Notes exported successfully</string>
    <string name="note_imported_successfully">Note imported successfully</string>
    <string name="notes_imported_successfully">Notes imported successfully</string>
    <string name="pref_title_show_dialogs">Ask before saving</string>
    <string name="send_to">Share note to&#8230;</string>
    <string name="view_note">View Note</string>
    <string name="action_install">Install</string>
    <string name="action_no_thanks">No Thanks</string>
    <string name="pref_title_show_date">Show date/time</string>
    <string name="action_theme">Theme</string>
    <string name="pref_title_direct_edit">Edit notes directly</string>
    <string name="pref_title_markdown">Markdown/HTML support</string>
    <string name="action_print">Print</string>
    <string name="action_start_selection">Select notes</string>
    <string name="action_select_all">Select all</string>
    <string name="no_notes_to_select">No notes to select</string>
    <string name="document">%1$s Document</string>
    <string name="no_notes_to_export">No notes selected to export</string>
    <string name="no_notes_to_delete">No notes selected to delete</string>
    <string name="check_for_updates">Check for Updates</string>
    <string name="action_media">Photo and Record</string>

    <string-array name="sort_by_list">
        <item>Date (newest first)</item>
        <item>Date (oldest first)</item>
        <item>Name (A to Z)</item>
        <item>Name (Z to A)</item>
    </string-array>
    <string-array name="theme_list">
        <item>Light / sans serif</item>
        <item>Light / serif</item>
        <item>Light / monospace</item>
        <item>Dark / sans serif</item>
        <item>Dark / serif</item>
        <item>Dark / monospace</item>
    </string-array>
    <string-array name="font_size_list">
        <item>Smallest</item>
        <item>Small</item>
        <item>Normal</item>
        <item>Large</item>
        <item>Largest</item>
    </string-array>
    <string name="title_activity_media">Photo and Record</string>
    <string name="media_title">Media</string>
    <string name="select_photo">Select Photo</string>
    <string name="take_photo">Take a Photo</string>
    <string name="record_sound">Lecture Record</string>
    <string name="spinner_photo">Select Photo..</string>
    <string name="delete_photo">Delete Photo</string>
    <string name="play_sound">Play / Pause</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="view_record_wav">录音WAV文件</string>
    <string name="view_record_amr">录音AMR文件</string>
    <string name="view_stop">停止录音</string>

    <string name="error_no_sdcard">没有SD卡，无法存储录音数据</string>
    <string name="error_state_record">正在录音中，请先停止录音</string>
    <string name="error_unknown">无法识别的错误</string>
    <string name="record_sound_btn">录音</string>
    <string name="play_sound_btn">播放</string>
    <string name="pause_sound_btn">暂停</string>
    <string name="stop_sound_btn">停止</string>
    <string name="del_sound_btn">删除</string>
    <string name="spinner_record">选择录音..</string>
    <string name="refind">识别到的内容</string>
    <string name="end_shibie">停止识别</string>
    <string name="start_shibie">开始识别</string>
    <string name="record_shibie">语音识别功能</string>
    <string name="recognize_words">识别图中文字</string>

</resources>
