<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutRecordActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_background"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:tag="main-layout-normal">

    <TextView
        android:id="@+id/record_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/record_sound"
        android:textColor="@color/text_color_primary"
        android:textSize="26sp"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/record_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/record_sound_btn" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/sound_play_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/play_sound_btn" />

        <Button
            android:id="@+id/delete_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/del_sound_btn" />

    </LinearLayout>


    <Spinner
        android:id="@+id/record_files"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:prompt="@string/spinner_record" />

    <TextView
        android:id="@+id/shibie_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:height="@dimen/dp_30"
        android:text="@string/record_shibie"
        android:textColor="@color/primary_dark"
        android:textSize="16sp"
        android:visibility="visible"
        tools:ignore="RtlHardcoded" />

    <LinearLayout
        android:id="@+id/recog_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/end_shibie" />

        <Button
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start_shibie" />

    </LinearLayout>


    <TextView
        android:gravity="center"
        android:id="@+id/tv_txt"
        android:textColor="#000"
        android:text="@string/refind"
        android:textSize="@dimen/dp_24"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:enabled="true"
        android:textIsSelectable="true"
        android:focusable="true"
        android:longClickable="true"/>



</LinearLayout>