<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutMediaActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_background"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:tag="main-layout-normal">

    <TextView
        android:id="@+id/media_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/media_title"
        android:textColor="@color/text_color_primary"
        android:textSize="26sp"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/photo_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/select_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select_photo" />

        <Button
            android:id="@+id/delete_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete_photo" />

        <Button
            android:id="@+id/record_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/record_sound" />


    </LinearLayout>


    <Spinner
        android:id="@+id/photos_list"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:prompt="@string/spinner_photo" />


    <Button
        android:id="@+id/ocr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recognize_words" />

    <ImageView
        android:id="@+id/show_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />


</LinearLayout>